--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.26",
     "highlight.js": "^11.11.1",
     "input-otp": "^1.4.2",
     "katex": "^0.16.27",
