--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.462.0",
     "mermaid": "^11.12.2",
     "next-themes": "^0.3.0",
+    "peerjs": "^1.5.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -72,6 +73,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "y-protocols": "^1.0.7",
+    "yjs": "^13.6.28",
     "zod": "^3.25.76"
   },
   "devDependencies": {
